--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ image: python:slim
 run:
     script:
         - pip3 install -r requirements.txt
-        - pxthon3 main.py
+        - python3 main.py
